--- a/practise-client/client-app/package.json
+++ b/practise-client/client-app/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.19",
+    "jwt-decode": "^2.2.0",
+    "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy": "https://us-central1-practise-58dec.cloudfunctions.net/api"
+    "proxy": "https://europe-west1-practise-58dec.cloudfunctions.net/api"
   }
 }
